tests/reference/asr-dim_float_03-ba04334.stderr
semantic error: `dim` argument of `Sum` intrinsic must be INTEGER
 --> tests/errors/dim_float_03.f90:2:26
  |
2 |  print *, sum([1, 2, 3], .true., 1.1)
  |                          ^^^^^^ 
